--- a/src/pages/GamePage.css
+++ b/src/pages/GamePage.css
@@ -78,9 +78,20 @@ h1, h2 {
 }
 
 .message {
-  border: 5px solid #000;
-  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 300px; */
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  color: #333;
 }
+
 
 .scores-container {
   margin-top: 20px;
@@ -151,3 +162,5 @@ button:disabled {
   color: #888; /* Change the text color to a lighter gray */
   cursor: not-allowed; /* Change the cursor to 'not-allowed' */
 }
+
+
